<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:orderInCategory="1"
        android:title="@string/add"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_add"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_manage"/>
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="2"
        android:title="@string/clear"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView"
        />
    <item
        android:title="@string/info">
        <menu>
            <item
                android:title="@string/title1"/>
            <item
                android:title="@string/title2"/>
        </menu>

    </item>

</menu>